--- a/mailing/templates/mailing/mailingsettings_detail.html
+++ b/mailing/templates/mailing/mailingsettings_detail.html
@@ -34,6 +34,10 @@
                         </tr>
                         <tr>
                             <td class="w-25">Время:</td>
+                            <td>{{ object.day }}</td>
+                        </tr>
+                        <tr>
+                            <td class="w-25">Время:</td>
                             <td>{{ object.time }}</td>
                         </tr>
                         <tr>
@@ -49,30 +53,42 @@
                 </div>
             </div>
 
-            <div class="card mb-4 box-shadow">
-                <div class="card-body">
-                    <div class="title md-5">
-                        <h4>Логи рассылки</h4>
-                    </div>
-                    <table class="table table-striped">
+            <div class="pricing-header px-3 py-1 pt-md-5 pb-md-4 mx-auto text-center">
+                <h5 class="display-6">Логи рассылки</h5>
+            </div>
+
+            <div class="container">
+                <div class="row text-center">
+                    <table class="table">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Дата и время последней попытки</th>
+                            <th scope="col">Статус попытки</th>
+                            <th scope="col">Ответ сервера</th>
+                            <th scope="col"></th>
+                        </tr>
+                        </thead>
+                        <tbody>
                         {% for log_item in object.logs_set.all %}
                         <tr>
-                            <td class="w-25">Дата и время последней попытки:</td>
-                            <td>{{ log_item.last_attempt_send }}</td>
-                        </tr>
-                        <tr>
-                            <td class="w-25">Статус посытки:</td>
-                            <td>{{ log_item.status_send }}</td>
-                        </tr>
-                        <tr>
-                            <td class="w-25">Ответ сервера:</td>
-                            <td>{{ log_item.last_attempt_response }}</td>
-                        </tr>
+                            <th scope="row">__</th>
 
+                            <td>
+                                {{ log_item.last_attempt_send }}
+                            </td>
 
+                            <td>
+                                {{ log_item.status_send }}
+                            </td>
+                            <td>
+                                {{ log_item.last_attempt_response }}
+                            </td>
+                        </tr>
                         {% endfor %}
-
+                        </tbody>
                     </table>
+
                 </div>
             </div>
         </div>
