--- a/mailing/templates/mailing/base.html
+++ b/mailing/templates/mailing/base.html
@@ -66,11 +66,9 @@
         <div class="col-6 col-md">
             <h5>Категории</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Рассылки</a></li>
-                <li><a class="text-muted" href="#">Телеграм боты</a></li>
-                <li><a class="text-muted" href="#">Полезные утилиты</a></li>
-                <li><a class="text-muted" href="#">Веб-приложения</a></li>
-                <li><a class="text-muted" href="#">Микросервисы</a></li>
+                <li><a class="text-muted" href="/">Рассылки</a></li>
+                <li><a class="text-muted" href="{% url 'client:list' %}">Клиенты</a></li>
+                <li><a class="text-muted" href="{% url 'blog:list' %}">Блог</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
@@ -82,7 +80,7 @@
         <div class="col-6 col-md">
             <h5>О нас</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="/contacts/">Контакты</a></li>
+                <li><a class="text-muted" href="#">Контакты</a></li>
             </ul>
         </div>
     </div>
