--- a/client/templates/client/client_detail.html
+++ b/client/templates/client/client_detail.html
@@ -8,7 +8,7 @@
             <div class="card mb-4 box-shadow">
                 <div class="card-body">
                     <div class="title md-5">
-                        <h4>Крточка клиента</h4>
+                        <h4>Карточка клиента</h4>
                     </div>
                     <table class="table table-striped">
                         <tr>
@@ -21,7 +21,7 @@
                         </tr>
                         <tr>
                             <td class="w-25">Имя:</td>
-                            {% if object.last_name == None %}
+                            {% if object.first_name == None %}
                             <td>Не указано</td>
                             {% else %}
                             <td>{{ object.first_name }}</td>
