--- a/mailing/templates/mailing/includes/inc_main_menu.html
+++ b/mailing/templates/mailing/includes/inc_main_menu.html
@@ -3,8 +3,17 @@
     <nav class="navbar ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Рассылки</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'client:list' %}">Клиенты</a>
-        <a class="p-2 btn btn-outline-primary" href="#">Блог</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:list' %}">Блог</a>
 
+        {% if user.is_authenticated %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выход</a>
+
+        {% else %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
+
+        {% endif %}
 
     </nav>
 </div>
