--- a/mailing/templates/mailing/mailingsettings_detail.html
+++ b/mailing/templates/mailing/mailingsettings_detail.html
@@ -13,7 +13,7 @@
                     <table class="table table-striped">
                         <tr>
                             <td class="w-25">Владелец/Отправитель:</td>
-                            <td>Не указан</td>
+                            <td>{{ object.user }}</td>
                         </tr>
                         <tr>
                             <td class="w-25">Тема письма:</td>
